[tool.poetry]
name = "desafio-tins"
version = "0.1.0"
description = "Desafio para vaga de dev Python Pleno na TINS"
authors = ["talesmm14 <talesmelquiades@hotmail.com>"]
readme = "README.md"
packages = [{include = "desafio_tins"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
django-environ = "^0.10.0"
whitenoise = "^6.4.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
mysqlclient = "^2.1.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-jazzmin = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
